# casper-erc20

./: .gitignore  Cargo.toml  Makefile  README.md
erc20/: Cargo.toml
erc20/src/: entry_points.rs  error.rs  events.rs  main.rs
tests/: Cargo.toml
tests/src/: erc20.rs  lib.rs  tests.rs  utilities.rs
tests/wasm/: erc20.wasm  erc20_token.wasm  factory.wasm  pair.wasm
