[package]
name = "erc20"
description = "ERC20 contract"
version = "0.1.0"
authors = ["FriendlyMarket <team@friendly.market>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="=1.4.4" }
types = { package = "casper-types", version="=1.5.0" }
hex = "0.4.3"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "erc20"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
